new structure and modules

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,7 @@ img {
   width: 300px;
   height: 300px;
   border: 3px solid #69748b;
-  background-image: url(../images/default.jpg);
+  background-image: url(../images/default.png);
 }
 
 .container {
